# svgmaze

./: .gitignore  CMakeLists.txt  LICENSE  README.md  svgmaze.org  version.h.in
src/: grid.c  grid.h  main.c  maze.c  maze.h  prng.c  prng.h  strings.c  strings.h  types.h
